--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:latest
@@ -12,18 +10,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  app:
-    build: .
-    container_name: reservations_app
-    depends_on:
-      - postgres
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/reservations_db
-      SPRING_DATASOURCE_USERNAME: reservations_db_user
-      SPRING_DATASOURCE_PASSWORD: 123456@reservations_db_password
-    ports:
-      - "8080:8080"
-    deploy:
-      replicas: 3
+#  app:
+
 volumes:
   postgres_data:
