--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=reservations
+server.port=7098
+server.shutdown=graceful
+logging.level.root=DEBUG
+server.servlet.context-path=/reservations/api
+spring.datasource.url=jdbc:postgresql://postgres:5432/reservations_db
+spring.datasource.username=reservations_db_user
+spring.datasource.password=123456@reservations_db_password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
