completed the service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=reservations
 server.port=7098
 server.shutdown=graceful
 logging.level.root=DEBUG
-server.servlet.context-path=/reservations/api
-spring.datasource.url=jdbc:postgresql://postgres:5432/reservations_db
+server.servlet.context-path=/slot-reservations
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservations_db
 spring.datasource.username=reservations_db_user
 spring.datasource.password=123456@reservations_db_password
 spring.jpa.hibernate.ddl-auto=update
